{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 598,
  "lineage": "89225d3a-0a40-8358-9644-792347b6b20f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.105.164.171",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-24T06:42:35.752-07:00",
            "id": "projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/addresses/gcp-default-ip",
            "name": "gcp-default-ip",
            "network_tier": "PREMIUM",
            "project": "prj-ext-prod-rnaseqsim-dr",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/addresses/gcp-default-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/routers/gcp-default-router"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "producer-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.89.17.36",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-28T08:59:01.511-07:00",
            "id": "projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/addresses/gcp-default-producer-ip",
            "name": "gcp-default-producer-ip",
            "network_tier": "PREMIUM",
            "project": "prj-ext-prod-rnaseqsim-dr",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/addresses/gcp-default-producer-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-producer"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-06-24T06:42:50.573-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/global/firewalls/gcp-default-allow-internal",
            "name": "gcp-default-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
            "priority": 1000,
            "project": "prj-ext-prod-rnaseqsim-dr",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/firewalls/gcp-default-allow-internal",
            "source_ranges": [
              "192.168.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.sequence_search"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8002"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-24T06:42:51.224-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/global/firewalls/gcp-default-http",
            "name": "gcp-default-http",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
            "priority": 1000,
            "project": "prj-ext-prod-rnaseqsim-dr",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/firewalls/gcp-default-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.sequence_search"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-24T06:42:51.040-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/global/firewalls/gcp-default-ssh",
            "name": "gcp-default-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
            "priority": 1000,
            "project": "prj-ext-prod-rnaseqsim-dr",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/firewalls/gcp-default-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.sequence_search"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "consumers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-8-v20220128",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-consumer-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-1",
            "instance_id": "289686772652704130",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "centos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "yYmj7y0QLSs=",
            "name": "gcp-default-consumer-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.9",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "ssh"
            ],
            "tags_fingerprint": "ON0SwU9MqZc=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_network.sequence_search",
            "google_compute_subnetwork.sequence_search"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-8-v20220128",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-consumer-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-2",
            "instance_id": "454710892317639041",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "centos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "yYmj7y0QLSs=",
            "name": "gcp-default-consumer-2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "ssh"
            ],
            "tags_fingerprint": "ON0SwU9MqZc=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_subnetwork.sequence_search",
            "google_compute_network.sequence_search"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-8-v20220128",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-consumer-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-3",
            "instance_id": "5107690036293796205",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "centos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "yYmj7y0QLSs=",
            "name": "gcp-default-consumer-3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.11",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "ssh"
            ],
            "tags_fingerprint": "ON0SwU9MqZc=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_network.sequence_search",
            "google_compute_subnetwork.sequence_search"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-8-v20220128",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-consumer-4"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-4",
            "instance_id": "3408756937143615872",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "centos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "yYmj7y0QLSs=",
            "name": "gcp-default-consumer-4",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.12",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-4",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "ssh"
            ],
            "tags_fingerprint": "ON0SwU9MqZc=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_network.sequence_search",
            "google_compute_subnetwork.sequence_search"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-8-v20220128",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-consumer-5"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-5",
            "instance_id": "8490428273150919041",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "centos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "yYmj7y0QLSs=",
            "name": "gcp-default-consumer-5",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.13",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-5",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "ssh"
            ],
            "tags_fingerprint": "ON0SwU9MqZc=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_subnetwork.sequence_search",
            "google_compute_network.sequence_search"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-8-v20220128",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-consumer-6"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-6",
            "instance_id": "6615429848763990401",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "centos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "yYmj7y0QLSs=",
            "name": "gcp-default-consumer-6",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.14",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-6",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "ssh"
            ],
            "tags_fingerprint": "ON0SwU9MqZc=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_network.sequence_search",
            "google_compute_subnetwork.sequence_search"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-8-v20220128",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-consumer-7"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-7",
            "instance_id": "4353538176193134976",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "centos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "yYmj7y0QLSs=",
            "name": "gcp-default-consumer-7",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.15",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-7",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "ssh"
            ],
            "tags_fingerprint": "ON0SwU9MqZc=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_network.sequence_search",
            "google_compute_subnetwork.sequence_search"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-8-v20220128",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-consumer-8"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-8",
            "instance_id": "3112907546706837889",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "centos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "yYmj7y0QLSs=",
            "name": "gcp-default-consumer-8",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.16",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-consumer-8",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "ssh"
            ],
            "tags_fingerprint": "ON0SwU9MqZc=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_subnetwork.sequence_search",
            "google_compute_network.sequence_search"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-8-v20220128",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-monitor"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-monitor",
            "instance_id": "3788401955569140078",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "centos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "yYmj7y0QLSs=",
            "name": "gcp-default-monitor",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.8",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-monitor",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "ssh"
            ],
            "tags_fingerprint": "ON0SwU9MqZc=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_subnetwork.sequence_search",
            "google_compute_network.sequence_search"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nfs_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-1804-bionic-v20220620",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-nfs-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-nfs-server",
            "instance_id": "392451424351867040",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "22jthDCNVgs=",
            "name": "gcp-default-nfs-server",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.7",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-nfs-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "ssh"
            ],
            "tags_fingerprint": "ON0SwU9MqZc=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_subnetwork.sequence_search"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-8-v20220128",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-postgres"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-postgres",
            "instance_id": "3123830486059188608",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "centos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "yYmj7y0QLSs=",
            "name": "gcp-default-postgres",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.6",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-postgres",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "ssh"
            ],
            "tags_fingerprint": "ON0SwU9MqZc=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_subnetwork.sequence_search",
            "google_compute_network.sequence_search"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "producer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-8-v20220128",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/disks/gcp-default-producer"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-producer",
            "instance_id": "5462388767972655489",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "centos:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDOJCL5MHBK4GpL+EbkCNgqbaMe3S5907WDhAxT4Nkl4w+yXSH3I2eXt2tEK9+EZxsrVzQh+kflEh6FqSbfQ/0//MlS6spTozC3L2RPmykDLVvtg/8EzdyQg/fNi7KRsAraWeaMh/V9E3LYAUZNsplJ6YEHmmZsKUlw56fghCqtyfYk73DQ1UsOidRhUtZoPrCGyI80XgtZL2RnKIw/uTaq1SvDtq5OT6kOBCBRZBETm3hJ5WMSi3KcD2pluoNnsSAWZJcjtBbKCJcsCNmP1sKGc7X96a48XUaPBbBjzdaCABqO2IayYqXnoD3PBT6FlouelVx+101Bw6ObJAuQv5bT7233Ay7RHxGyrUgFbjCPaTN5HKgyisSAl2ScTT329KV6I6IJuTbZmAFIPPgwdn/vDbhZEzVg6ABVoZYgd66b3E [...]
            },
            "metadata_fingerprint": "yYmj7y0QLSs=",
            "name": "gcp-default-producer",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.17.36",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
                "network_ip": "192.168.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "subnetwork_project": "prj-ext-prod-rnaseqsim-dr"
              }
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/zones/europe-west2-a/instances/gcp-default-producer",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal",
              "http",
              "ssh"
            ],
            "tags_fingerprint": "3uG77aO4z0s=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_address.producer-ip",
            "google_compute_network.sequence_search",
            "google_compute_subnetwork.sequence_search"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "sequence_search",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
            "name": "gcp-default-network",
            "project": "prj-ext-prod-rnaseqsim-dr",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-24T06:42:50.833-07:00",
            "id": "projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/routers/gcp-default-router",
            "name": "gcp-default-router",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
            "project": "prj-ext-prod-rnaseqsim-dr",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/routers/gcp-default-router"
          },
          "dependencies": [
            "google_compute_network.sequence_search"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "prj-ext-prod-rnaseqsim-dr/europe-west2/gcp-default-router/gcp-default-gateway",
            "min_ports_per_vm": 0,
            "name": "gcp-default-gateway",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/addresses/gcp-default-ip"
            ],
            "project": "prj-ext-prod-rnaseqsim-dr",
            "router": "gcp-default-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat-ip",
            "google_compute_network.sequence_search",
            "google_compute_router.nat-router",
            "google_compute_subnetwork.sequence_search"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sequence_search",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-24T06:42:51.429-07:00",
            "gateway_address": "192.168.0.1",
            "id": "projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork",
            "ip_cidr_range": "192.168.0.0/24",
            "name": "gcp-default-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/global/networks/gcp-default-network",
            "private_ip_google_access": false,
            "project": "prj-ext-prod-rnaseqsim-dr",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-ext-prod-rnaseqsim-dr/regions/europe-west2/subnetworks/gcp-default-subnetwork"
          },
          "dependencies": [
            "google_compute_network.sequence_search"
          ]
        }
      ]
    }
  ]
}